[gd_scene load_steps=11 format=3 uid="uid://bumh57lmx1jlc"]

[ext_resource type="Script" path="res://scenes/ui/menus/pause/pause.gd" id="1_i4s0k"]
[ext_resource type="Texture2D" uid="uid://c8b8irfugbxdj" path="res://assets/environment/backgrounds/Fond Menu 02.svg" id="2_70uiq"]
[ext_resource type="Texture2D" uid="uid://ddk5xo6vibq1t" path="res://assets/ui/icons/Button Replay.svg" id="4_242jj"]
[ext_resource type="Texture2D" uid="uid://bm2mc3oc02tx" path="res://assets/ui/icons/Button Play.svg" id="5_bqgxy"]
[ext_resource type="Theme" uid="uid://dr31fy67cgji3" path="res://assets/resources/themes/generic.tres" id="6_8ptoc"]
[ext_resource type="Texture2D" uid="uid://dksoj327amr1a" path="res://assets/ui/icons/Button Home Menu.svg" id="6_ol8q3"]
[ext_resource type="Texture2D" uid="uid://dqm3a3tfnyu2r" path="res://assets/ui/icons/Button Music On.svg" id="7_gxx80"]
[ext_resource type="Texture2D" uid="uid://bftxjalenxriu" path="res://assets/ui/icons/Button Music Off.svg" id="8_f8w4k"]
[ext_resource type="Texture2D" uid="uid://b72djafe25kjf" path="res://assets/ui/icons/Button Sound On.svg" id="9_yy2d7"]
[ext_resource type="Texture2D" uid="uid://sn02kb1pfkvd" path="res://assets/ui/icons/Button Sound Off.svg" id="10_dy38s"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i4s0k")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 150

[node name="PanelContainer" type="TextureRect" parent="Panel/MarginContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_70uiq")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="TitlePauseMenu" type="Label" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_8ptoc")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "PAUSE.TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonLayer" type="HBoxContainer" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="RestartButton" type="TextureButton" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ButtonLayer"]
custom_minimum_size = Vector2(100, 87.5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_242jj")
ignore_texture_size = true
stretch_mode = 5

[node name="PlayButton" type="TextureButton" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ButtonLayer"]
custom_minimum_size = Vector2(100, 87.5)
layout_mode = 2
texture_normal = ExtResource("5_bqgxy")
ignore_texture_size = true
stretch_mode = 5

[node name="HomeButton" type="TextureButton" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/ButtonLayer"]
custom_minimum_size = Vector2(100, 87.5)
layout_mode = 2
texture_normal = ExtResource("6_ol8q3")
ignore_texture_size = true
stretch_mode = 5

[node name="TopLeftIcon" type="HBoxContainer" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="MusicButton" type="TextureButton" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/TopLeftIcon"]
texture_filter = 6
custom_minimum_size = Vector2(80, 70)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("7_gxx80")
texture_pressed = ExtResource("8_f8w4k")
ignore_texture_size = true
stretch_mode = 5

[node name="SoundButton" type="TextureButton" parent="Panel/MarginContainer/PanelContainer/CenterContainer/VBoxContainer/TopLeftIcon"]
custom_minimum_size = Vector2(80, 70)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("9_yy2d7")
texture_pressed = ExtResource("10_dy38s")
ignore_texture_size = true
stretch_mode = 5
